--- a/food.html
+++ b/food.html
@@ -3,7 +3,7 @@
     <head>  
         <title>RESTAURANT MENU</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="fontAwesome/CSS/all.css">
+        <link rel="stylesheet" href="fontAwesome/CSS/all.min.css">
 
     </head>
     <body class="body-home">
