--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                         </header>
             <main>
                 <h2>MENU</h2>
+                <h2>click on the images below</h>
                 <div class="menu-wrapper">
                     <div class="menu-container">
                         <div>
